Fixed View component layout issues

--- a/src/components/View/style.scss
+++ b/src/components/View/style.scss
@@ -4,13 +4,5 @@
 
   &-content{
     height: 100%;
-    display: flex;
-  }
-
-  &-icons {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
   }
 }
